--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li>my cat</li>
       <li>play with my cat</li>
       <li>sleep with my cat</li>
+      <li>using my token</li>
     </ul>
   </section>
 
